--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,13 +7,14 @@
 </head>
 
 <body>
-  <form action="" method="post">
+  <form id="mime-form">
+  <!-- <form action="http://localhost:8080/api/mime" method="POST"> -->
     <div class="container">
       <div class="basic">
         <div class="form-row">
-          <label class="mlabel" for="name">First Last</label>
-          <input type="text" id="firstName">
-          <input type="text" id="secondName">
+          <label class="mlabel" for="firstName lastName">First Last</label>
+          <input type="text" id="firstName" required>
+          <input type="text" id="lastName" required>
         </div>
         <div class="form-row">
           <label class="mlabel" for="jobTitle">Job title</label>
@@ -92,11 +93,11 @@
             <input class="item" type="checkbox" name="member" id="member">
             <span class="item">
               <label for="join">Join</label>
-              <input type="text" id="join">
+              <input type="datetime-local" id="join">
             </span>
             <span class="item">
               <label for="leave">Leave</label>
-              <input type="text" id="leave">
+              <input type="datetime-local" id="leave">
             </span>
           </span>
         </div>
@@ -122,7 +123,7 @@
               <label for="com-fax">Fax</label>
             </span>
             <span class="item">
-              <input type="radio" name="communicate" id="com-email">
+              <input type="radio" name="communicate" checked id="com-email">
               <label for="com-email">Email</label>
             </span>
             <span class="item">
@@ -161,16 +162,16 @@
           <label for="associations" class="mlabel">Associations</label>
           <span class="field">
             <span class="item">
-              <input type="checkbox" name="associations" id="cpta">
-              <label for="cpta">CPTA</label>
+              <input type="checkbox" name="associations" id="CPTA">
+              <label for="CPTA">CPTA</label>
             </span>
             <span class="item">
-              <input type="checkbox" name="associations" id="cto">
-              <label for="cto">CTO</label>
+              <input type="checkbox" name="associations" id="CTO">
+              <label for="CTO">CTO</label>
             </span>
             <span class="item">
-              <input type="checkbox" name="associations" id="pact">
-              <label for="pact">PACT</label>
+              <input type="checkbox" name="associations" id="PACT">
+              <label for="PACT">PACT</label>
             </span>
           </span>
         </div>
@@ -202,10 +203,10 @@
         <div class="d-form-row">
           <label for="contractDate" class="mlabel">Contract Date</label>
           <span class="field">
-            <input type="text" name="" id="contractDate" class="item">
+            <input type="datetime-local" name="" id="contractDate" class="item">
             <span class="item">
               <label for="tflDates" class="mlabel">TFL Dates</label>
-              <input type="text" name="" id="tflDates">
+              <input type="datetime-local" name="" id="tflDates">
             </span>
           </span>
         </div>
@@ -221,8 +222,8 @@
             <input type="text" name="" id="tflFee" class="item">
             <span class="item">
               <label for="counsellor" class="mlabel">Counsellor</label>
-              <input type="checkbox" name="counsellor" id="counsellor-yes">
-              <label for="counsellor-yes">Yes</label>
+              <input type="checkbox" name="counsellor" id="counsellor">
+              <label for="counsellor">Yes</label>
             </span>
           </span>
         </div>
@@ -242,7 +243,7 @@
           <label class="mlabel" for="status">Status</label>
           <span class="field">
             <span class="item">
-              <input type="radio" name="status" id="status-potential">
+              <input type="radio" name="status" checked id="status-potential">
               <label for="status-potential">Potential</label>
             </span>
             <span class="item">
@@ -259,6 +260,7 @@
             </span>
           </span>
         </div>
+        <button type="submit">Submit</button>
       </div>
     </div>
   </form>
