--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
   <title>Mime App</title>
@@ -8,7 +9,6 @@
 
 <body>
   <form id="mime-form">
-  <!-- <form action="http://localhost:8080/api/mime" method="POST"> -->
     <div class="container">
       <div class="basic">
         <div class="form-row">
