--- a/src/main/resources/static/user.html
+++ b/src/main/resources/static/user.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Mime App</title>
+  <title>Member details</title>
   <script src="user.js"></script>
   <link rel="stylesheet" href="user.css">
 </head>
@@ -12,9 +12,9 @@
     <div class="container">
       <div class="basic">
         <div class="form-row">
-          <label class="mlabel" for="firstName lastName">First Last</label>
-          <input type="text" id="firstName" required>
-          <input type="text" id="lastName" required>
+          <label class="mlabel" for="firstName lastName">Full Name</label>
+          <input placeholder="First name" type="text" id="firstName" required>
+          <input placeholder="Last name" type="text" id="lastName" required>
         </div>
         <div class="form-row">
           <label class="mlabel" for="jobTitle">Job title</label>
@@ -83,7 +83,7 @@
         </div>
         <div class="form-row">
           <label class="mlabel" for="notes">Notes</label>
-          <textarea id="notes" cols="30" rows="10"></textarea>
+          <textarea id="notes" cols="10" rows="5"></textarea>
         </div>
       </div>
       <div class="detailed">
