commit changes made on 28072022

--- a/src/main/resources/static/user.html
+++ b/src/main/resources/static/user.html
@@ -21,7 +21,7 @@
           <input type="text" id="jobTitle">
         </div>
         <div class="form-row">
-          <label class="mlabel" for="company">Company</label>
+          <label class="mlabel" for="company">Company/Org</label>
           <input type="text" id="company">
         </div>
         <div class="form-row">
@@ -88,16 +88,15 @@
       </div>
       <div class="detailed">
         <div class="d-form-row">
-          <label class="mlabel" for="member">Member</label>
+          <label class="mlabel">Member</label>
           <span class="field">
-            <input class="item" type="checkbox" name="member" id="member">
             <span class="item">
               <label for="join">Join</label>
-              <input type="datetime-local" id="join">
+              <input type="date" id="join">
             </span>
             <span class="item">
               <label for="leave">Leave</label>
-              <input type="datetime-local" id="leave">
+              <input type="date" id="leave">
             </span>
           </span>
         </div>
