--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,53 +12,25 @@
 <body>
     <header id="main-header">
         <div class="container">
+          <a href="index.html">
             <img src="images/comedytragedymasks.jpg" alt="Comedy_Tragedy_masks_logo">
+          </a>
             <h1>Research Project Theatre DB</h1>
         </div>
+        <nav id="navbar">
+          <div class="container">
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="user.html">Register</a></li>
+                  <li><a href="admin.html">Member search</a></li>
+              </ul>
+          </div>        
+      </nav>
     </header>
-    <nav id="navbar">
-        <div class="container">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="About.html">About us</a></li>
-                <li><a href="signup.html">Login</a></li>
-                <li><a href="user.html">Register</a></li>
-            </ul>
-        </div>        
-    </nav>
+    <main>
     <h2><a href="/user.html">Register</a> to become a Member</h2>
-    <h3>Search for Member Data</h3>
-    <div class="filter-section">
-      <form id="filter-form">
-        <div class="main-filters">
-          <label>Queries:</label>
-          <span class="filter-fields">
-            <button type="button" onclick="addQuery()">Add Query</button>
-            <div class="queries-area" id="queries-area"></div>
-          </span>
-        </div>
-        <div class="main-filters">
-          <label>Roles:</label>
-          <span class="filter-fields">
-            <select name="roles-select" id="roles-select" onchange="roleSelectHandler(this.selectedIndex)">
-              <option value="none" >Select Role</option>
-            </select>
-          </span>
-          <div id="selected-roles"></div>
-        </div>
-        <button type="submit">Search</button>
-      </form>
-    </div>
-    <div class="result-section">
-      <table id="filter-results">
-        <caption>Filtered Results</caption>
-        <tr>
-          <th>ID</td>
-          <th>Queried</td>
-        </tr>
-        </table>
-    </div>
-    <div style="margin-top:350px"></div>
+    <div style="margin-top: 475px"></div>
+  </main>
     <footer>
         <p>Copyright &copy;2022, John Paul.co</p>
     </footer>
