--- a/src/main/resources/static/user.html
+++ b/src/main/resources/static/user.html
@@ -88,6 +88,14 @@
       </div>
       <div class="detailed">
         <div class="d-form-row">
+          <label class="mlabel">Date of Birth</label>
+          <span class="field">
+            <span class="item">
+              <input type="date" id="dob">
+            </span>
+          </span>
+        </div>
+        <div class="d-form-row">
           <label class="mlabel">Member</label>
           <span class="field">
             <span class="item">
@@ -161,16 +169,20 @@
           <label for="associations" class="mlabel">Associations</label>
           <span class="field">
             <span class="item">
-              <input type="checkbox" name="associations" id="CPTA">
-              <label for="CPTA">CPTA</label>
+              <input type="checkbox" name="associations" id="EQUITY">
+              <label for="EQUITY">EQUITY</label>
             </span>
             <span class="item">
-              <input type="checkbox" name="associations" id="CTO">
-              <label for="CTO">CTO</label>
+              <input type="checkbox" name="associations" id="IATSE">
+              <label for="IATSE">IATSE - International Alliance of Theatrical Stage Employees</label>
             </span>
             <span class="item">
               <input type="checkbox" name="associations" id="PACT">
-              <label for="PACT">PACT</label>
+              <label for="PACT">PACT - Professional Association of Canadian Theaters</label>
+            </span>
+            <span class="item">
+              <input type="checkbox" name="associations" id="PARC">
+              <label for="PARC">PARC - Playwrights Atlantic Resource Center</label>
             </span>
           </span>
         </div>
@@ -184,7 +196,7 @@
           <span class="field" id="orgs-field"></span>
         </div>
         <div class="d-form-row">
-          <label for="events" class="mlabel">Events</label>
+          <label for="events" class="mlabel">Shows</label>
           <span class="field" id="events-field"></span>
         </div>
         <hr>
@@ -236,6 +248,27 @@
           <label for="accomodation" class="mlabel">Accommodation</label>
           <span class="field">
             <input class="bigtext item" type="text" name="" id="accomodation">
+          </span>
+        </div>
+        <div class="d-form-row">
+          <label for="benefits" class="mlabel">Benefits</label>
+          <span class="field">
+            <span class="item">
+              <input type="checkbox" name="benefits" id="child">
+              <label for="child">Child Benefit</label>
+            </span>
+            <span class="item">
+              <input type="checkbox" name="benefits" id="trans">
+              <label for="trans">Trans</label>
+            </span>
+            <span class="item">
+              <input type="checkbox" name="benefits" id="first-aid">
+              <label for="first-aid">First Aid</label>
+            </span>
+            <span class="item">
+              <input type="checkbox" name="benefits" id="CPR">
+              <label for="CPR">CPR</label>
+            </span>
           </span>
         </div>
         <div class="d-form-row">
