changes new template 29072022

--- a/src/main/resources/static/user.html
+++ b/src/main/resources/static/user.html
@@ -113,11 +113,11 @@
           <span class="field">
             <span class="item">
               <input type="checkbox" name="infoWanted" id="newsLetter">
-              <label for="newsLetter">News Letter</label>
+              <label for="newsLetter">Show</label>
             </span>
             <span class="item">
               <input type="checkbox" name="infoWanted" id="opening">
-              <label for="opening">Opening</label>
+              <label for="opening">Project</label>
             </span>
           </span>
         </div>
@@ -127,7 +127,7 @@
           <span class="field">
             <span class="item">
               <input type="radio" name="communicate" id="com-fax">
-              <label for="com-fax">Fax</label>
+              <label for="com-fax">Phone</label>
             </span>
             <span class="item">
               <input type="radio" name="communicate" checked id="com-email">
@@ -140,23 +140,23 @@
           </span>
         </div>
         <div class="d-form-row">
-          <label class="mlabel" for="traineeLevels">Trainee Levels</label>
+          <label class="mlabel" for="traineeLevels">Student</label>
           <span class="field">
             <span class="item">
               <input type="checkbox" name="traineeLevels" id="level1">
-              <label for="level1">Level 1</label>
+              <label for="level1">CBU Student</label>
             </span>
             <span class="item">
               <input type="checkbox" name="traineeLevels" id="level2">
-              <label for="level2">Level 2</label>
+              <label for="level2">Other University</label>
             </span>
             <span class="item">
               <input type="checkbox" name="traineeLevels" id="level3">
-              <label for="level3">Level 3</label>
+              <label for="level3">High school</label>
             </span>
             <span class="item">
               <input type="checkbox" name="traineeLevels" id="admin">
-              <label for="admin">Admin</label>
+              <label for="admin">Graduate</label>
             </span>
           </span>
         </div>
@@ -195,13 +195,14 @@
           <label for="orgs" class="mlabel">Org Type</label>
           <span class="field" id="orgs-field"></span>
         </div>
+        <hr>
         <div class="d-form-row">
-          <label for="events" class="mlabel">Shows</label>
+          <label for="events" class="mlabel">Shows/Workshops</label>
           <span class="field" id="events-field"></span>
         </div>
         <hr>
         <div class="d-form-row">
-          <label for="issues" class="mlabel">Issues</label>
+          <label for="issues" class="mlabel">Themes</label>
           <span class="field" id="issues-field"></span>
         </div>
         <hr>
