big css changes 30072022

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,38 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theatre DB Home</title>
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cape Breton Arts Database Home</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <script src="index.js"></script>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
     <header id="main-header">
+      <a href="index.html">
+        <img
+          src="images/comedytragedymasks.jpg"
+          alt="Comedy_Tragedy_masks_logo"
+        />
+      </a>
+      <div class="container">
+        <h1>Cape Breton Arts Database</h1>
+      </div>
+      <nav id="navbar">
         <div class="container">
-          <a href="index.html">
-            <img src="images/comedytragedymasks.jpg" alt="Comedy_Tragedy_masks_logo">
-          </a>
-            <h1>Research Project Theatre DB</h1>
+          <ul>
+            <li><a class="button" href="index.html">Home</a></li>
+            <li><a class="button" href="user.html">Become a Volunteer</a></li>
+            <li><a class="button" href="admin.html">admin</a></li>
+          </ul>
         </div>
-        <nav id="navbar">
-          <div class="container">
-              <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="user.html">Register</a></li>
-                  <li><a href="admin.html">Member search</a></li>
-              </ul>
-          </div>        
       </nav>
     </header>
     <main>
-    <h2><a href="/user.html">Register</a> to become a Member</h2>
-    <div style="margin-top: 475px"></div>
-  </main>
+      <section id="showcase"></section>
+      <div class="container">
+        <section>
+          <h2>Want to be part of Magic?</h2>
+          <p>
+            We're seeking volunteers information for the Cape Breton Arts
+            Database!
+          </p>
+          <p>
+            If you are passionate about Arts and believe in continued growth of
+            Cape Breton Arts, We want YOU to join us in our efforts by becoming
+            an VOLUNTEER.
+          </p>
+        </section>
+        <br />
+        <h3>
+          <a class="button" href="/user.html"
+            >CLICK HERE TO SIGN UP TO VOLUNTEER</a
+          >
+        </h3>
+      </div>
+    </main>
+    <div style="margin-top: 5px"></div>
     <footer>
-        <p>Copyright &copy;2022, John Paul.co</p>
+      <div class="footer">
+        <ul>
+          <p>Follow us</p>
+          <li><a href="http://facebook.com" target="_blank">facebook</a></li>
+          <li><a href="http://instagram.com" target="_blank">Instagram</a></li>
+          <li><a href="http://twitter.com" target="_blank">Twitter</a></li>
+        </ul>
+        <p class="copy">Copyright &copy;2022, John Paul.co</p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
