--- a/src/main/resources/static/admin.html
+++ b/src/main/resources/static/admin.html
@@ -11,14 +11,17 @@
 </head>
 <body>
     <header id="main-header">
-        <div class="container">
+        
             <a href="index.html">
                 <img src="images/comedytragedymasks.jpg" alt="Comedy_Tragedy_masks_logo">
             </a>
-            <h1>Research Project Theatre DB</h1>
+            <div class="container">  
+            <h1>Cape Breton Arts Database</h1>
         </div>
     </header>
-    <h2>Search for Member Data</h2>
+    <div class="container">
+      <h2>Search for Volunteer Data</h2>
+    </div>
     <div class="filter-section">
       <form id="filter-form">
         <div class="main-filters">
@@ -37,7 +40,7 @@
           </span>
           <div id="selected-roles"></div>
         </div>
-        <button type="submit">Search</button>
+        <button class="button" type="submit">Search</button>
       </form>
     </div>
     <div class="result-section">
