--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -53,11 +53,11 @@
         </h3>
       </div>
     </main>
-    <div style="margin-top: 5px"></div>
+    <div style="margin-top: 30px"></div>
     <footer>
       <div class="footer">
         <ul>
-          <p>Follow us</p>
+          <p>Follow us on:</p>
           <li><a href="http://facebook.com" target="_blank">facebook</a></li>
           <li><a href="http://instagram.com" target="_blank">Instagram</a></li>
           <li><a href="http://twitter.com" target="_blank">Twitter</a></li>
