--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -17,15 +17,15 @@
           alt="Comedy_Tragedy_masks_logo"
         />
       </a>
-      <div class="container">
+      <div class="containerh">
         <h1>Cape Breton Arts Database</h1>
       </div>
       <nav id="navbar">
-        <div class="container">
+        <div class="containerh">
           <ul>
             <li><a class="button" href="index.html">Home</a></li>
             <li><a class="button" href="user.html">Become a Volunteer</a></li>
-            <li><a class="button" href="admin.html">admin</a></li>
+            <!-- <li><a class="button" href="adminsheela.html">admin</a></li> -->
           </ul>
         </div>
       </nav>
@@ -36,7 +36,7 @@
         <section>
           <h2>Want to be part of Magic?</h2>
           <p>
-            We're seeking volunteers information for the Cape Breton Arts
+            We're seeking volunteers for the Cape Breton Arts
             Database!
           </p>
           <p>
@@ -53,16 +53,23 @@
         </h3>
       </div>
     </main>
-    <div style="margin-top: 30px"></div>
+    <div style="margin-top: 60px"></div>
     <footer>
       <div class="footer">
-        <ul>
-          <p>Follow us on:</p>
-          <li><a href="http://facebook.com" target="_blank">facebook</a></li>
-          <li><a href="http://instagram.com" target="_blank">Instagram</a></li>
-          <li><a href="http://twitter.com" target="_blank">Twitter</a></li>
-        </ul>
-        <p class="copy">Copyright &copy;2022, John Paul.co</p>
+        <span class="fblock1">
+          <ul>
+            <p>Follow us on:</p>
+            <li><a href="http://facebook.com" target="_blank">facebook</a></li>
+            <li><a href="http://instagram.com" target="_blank">Instagram</a></li>
+            <li><a href="http://twitter.com" target="_blank">Twitter</a></li>
+          </ul>
+        </span>
+    
+        <span class="fblock2">
+          <p class="copy">This site is best viewed in 1024 * 768 resolution with latest version of Chrome, Firefox, Safari and Internet Explorer.
+          </p>
+          <p class="copy">Copyright &copy;2022, John Paul.co</p>
+        </span>
       </div>
     </footer>
   </body>
